# detritus-logistic-classification

./: .gitignore  README.md  data.set  detritus_classifier.ipynb  detritus_classifier.py  pyproject.toml  requirements.txt
