[project]
name = "detritus-logistic-classification"
version = "0.1.0"
description = "Logistic model for detritus classification in FlowCAM data"
authors = [
    { name = "Ovidio Fernando Garcia Oliva", email = "ovidio.garcia@hereon.de" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.3",
    "scikit-learn==1.5.2",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.5",
    "rich[jupyter]==13.9.4",
    "matplotlib==3.9.2",
    "nbformat==5.10.4",
    "plotly==5.24.1",
    "rich==13.9.4",
    "skops==0.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3